// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ComposableTutorial (mdx-components) unit tests renders ComposableContent only when selections match (legacy SelectedContent with no prop always shows) 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: -webkit-sticky;
  position: sticky;
  top: 60px;
  background: var(--background-color-primary);
  -webkit-column-gap: 16px;
  column-gap: 16px;
  row-gap: 12px;
  justify-items: space-between;
  border-bottom: 1px solid #E8EDEB;
  padding-bottom: 24px;
  z-index: 2;
}

@media only screen and (max-width: 767px) {
  .emotion-0 {
    -webkit-box-flex-wrap: wrap;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

.emotion-1 {
  -webkit-flex: 1 1 200px;
  -ms-flex: 1 1 200px;
  flex: 1 1 200px;
  font-size: 13px;
  overflow: hidden;
  z-index: 800;
  max-width: 200px;
}

.emotion-1 label,
.emotion-1 button {
  font-size: inherit;
}

.emotion-1 button {
  margin-top: 3px;
}

.dark-theme .emotion-1>button {
  background-color: var(--gray-dark4);
  color: var(--gray-light3);
}

@media only screen and (max-width: 767px) {
  .emotion-1 {
    -webkit-flex: 0 1 calc(50% - 8px);
    -ms-flex: 0 1 calc(50% - 8px);
    flex: 0 1 calc(50% - 8px);
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2>label {
  margin-bottom: 4px;
  text-transform: uppercase;
  color: var(--gray-dark1);
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.emotion-2>button {
  margin-top: 0;
  height: 22px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 4px;
}

.emotion-4 {
  color: #001E2B;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 13px;
  line-height: 20px;
  font-size: 13px;
  line-height: 20px;
  pointer-events: none;
}

@media only screen and (max-width: 768px) and (hover: none) and (pointer: coarse),@media only screen and (max-width: 768px) and (hover: none) and (pointer: none) {
  .emotion-4 {
    font-size: 16px;
    line-height: 19px;
  }
}

.emotion-5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #F9FBFA;
  border-color: #889397;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 36px;
  font-weight: 400;
  background-color: #FFFFFF;
  color: #889397;
  width: 100%;
  font-size: 13px;
}

.emotion-5:focus-visible,
.emotion-5[data-focus="true"] {
  outline: none;
}

.emotion-5:active,
.emotion-5[data-active="true"],
.emotion-5:focus,
.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5:focus-visible,
.emotion-5[data-focus="true"] {
  color: #001E2B;
}

.emotion-5:hover,
.emotion-5[data-hover="true"],
.emotion-5:active,
.emotion-5[data-active="true"] {
  color: #001E2B;
  background-color: #FFFFFF;
  box-shadow: 0 0 0 3px #E8EDEB;
}

.emotion-5:focus-visible,
.emotion-5[data-focus="true"] {
  background-color: #FFFFFF;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-5>*:last-child {
  grid-template-columns: 1fr 16px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-5>*:last-child>svg {
  justify-self: right;
  width: 16px;
  height: 16px;
}

.emotion-5>*:last-child>svg {
  color: #5C6C75;
}

.emotion-5>*:last-child {
  padding: 0 8px 0 12px;
}

.emotion-5:focus-visible {
  box-shadow: 0 0 0 3px #0498EC;
  border-color: rgba(255, 255, 255, 0);
}

@media only screen and (max-width: 768px) and (hover: none) and (pointer: coarse),@media only screen and (max-width: 768px) and (hover: none) and (pointer: none) {
  .emotion-5 {
    height: 36px;
    font-size: 16px;
  }
}

.emotion-6 {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5px;
}

.emotion-7 {
  display: grid;
  grid-auto-flow: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 0;
  -webkit-transition: all 150 ease-in-out;
  transition: all 150 ease-in-out;
  padding: 0 11px;
  gap: 6px;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  gap: 4px;
  overflow: hidden;
}

.emotion-9 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  max-width: 100%;
}

.emotion-10 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: #889397;
  height: 16px;
  width: 16px;
  justify-self: left;
}

.emotion-11 {
  display: none;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
}

.emotion-17 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #F9FBFA;
  border-color: #889397;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 36px;
  font-weight: 400;
  background-color: #FFFFFF;
  width: 100%;
  font-size: 13px;
}

.emotion-17:focus-visible,
.emotion-17[data-focus="true"] {
  outline: none;
}

.emotion-17:active,
.emotion-17[data-active="true"],
.emotion-17:focus,
.emotion-17:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17:focus-visible,
.emotion-17[data-focus="true"] {
  color: #001E2B;
}

.emotion-17:hover,
.emotion-17[data-hover="true"],
.emotion-17:active,
.emotion-17[data-active="true"] {
  color: #001E2B;
  background-color: #FFFFFF;
  box-shadow: 0 0 0 3px #E8EDEB;
}

.emotion-17:focus-visible,
.emotion-17[data-focus="true"] {
  background-color: #FFFFFF;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-17>*:last-child {
  grid-template-columns: 1fr 16px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-17>*:last-child>svg {
  justify-self: right;
  width: 16px;
  height: 16px;
}

.emotion-17>*:last-child>svg {
  color: #5C6C75;
}

.emotion-17>*:last-child {
  padding: 0 8px 0 12px;
}

.emotion-17:focus-visible {
  box-shadow: 0 0 0 3px #0498EC;
  border-color: rgba(255, 255, 255, 0);
}

@media only screen and (max-width: 768px) and (hover: none) and (pointer: coarse),@media only screen and (max-width: 768px) and (hover: none) and (pointer: none) {
  .emotion-17 {
    height: 36px;
    font-size: 16px;
  }
}

.emotion-25 {
  margin-top: 24px;
}

.emotion-26>*:first-child:not(script):not(style) {
  margin-top: 24px;
}

<div>
    <div
      class="emotion-0"
    >
      <div
        class="configurable-option emotion-1"
      >
        <div
          class="emotion-2"
          data-lgid="lg-select"
          data-testid="lg-select"
        >
          <div
            class="emotion-3"
          >
            <label
              class="emotion-4"
              data-lgid="lg-select-label"
              data-testid="lg-select"
              for="select-9"
              id="select-8-label"
            >
              Interface
            </label>
          </div>
          <button
            aria-controls="select-8-menu"
            aria-describedby="select-8-description"
            aria-disabled="false"
            aria-expanded="false"
            aria-invalid="false"
            aria-labelledby="select-8-label"
            class="lg-ui-button-0000 emotion-5"
            data-lgid="lg-select-trigger"
            data-testid="leafygreen-ui-select-menubutton"
            id="select-9"
            type="button"
            value=""
          >
            <div
              class="emotion-6"
            />
            <div
              class="emotion-7"
            >
              <div
                class="emotion-8"
              >
                <div
                  class="lg-ui-select-menu-0000 emotion-9"
                  data-lgid="lg-select-button_text"
                  data-testid="lg-select-button_text"
                >
                  Select
                </div>
              </div>
              <svg
                alt=""
                aria-hidden="true"
                class="emotion-10"
                height="16"
                role="presentation"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
          <span
            class="emotion-11"
          />
          <div
            aria-live="polite"
            aria-relevant="all"
            class="emotion-12"
            data-lgid="lg-form_field-feedback"
            data-testid="lg-form_field-feedback"
          />
        </div>
      </div>
      <div
        class="configurable-option emotion-1"
      >
        <div
          class="emotion-2"
          data-lgid="lg-select"
          data-testid="lg-select"
        >
          <div
            class="emotion-3"
          >
            <label
              class="emotion-4"
              data-lgid="lg-select-label"
              data-testid="lg-select"
              for="select-12"
              id="select-11-label"
            >
              Language
            </label>
          </div>
          <button
            aria-controls="select-11-menu"
            aria-describedby="select-11-description"
            aria-disabled="false"
            aria-expanded="false"
            aria-invalid="false"
            aria-labelledby="select-11-label"
            class="lg-ui-button-0000 emotion-17"
            data-lgid="lg-select-trigger"
            data-testid="leafygreen-ui-select-menubutton"
            id="select-12"
            type="button"
            value="nodejs"
          >
            <div
              class="emotion-6"
            />
            <div
              class="emotion-7"
            >
              <div
                class="emotion-8"
              >
                <div
                  class="lg-ui-select-menu-0000 emotion-9"
                  data-lgid="lg-select-button_text"
                  data-testid="lg-select-button_text"
                >
                  Node.js
                </div>
              </div>
              <svg
                alt=""
                aria-hidden="true"
                class="emotion-10"
                height="16"
                role="presentation"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
          <span
            class="emotion-11"
          />
          <div
            aria-live="polite"
            aria-relevant="all"
            class="emotion-12"
            data-lgid="lg-form_field-feedback"
            data-testid="lg-form_field-feedback"
          />
        </div>
      </div>
    </div>
    <div
      class="emotion-25"
    >
      <div
        class="composable-content emotion-26"
      >
        Always visible (no selections prop)
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ComposableTutorial (mdx-components) unit tests renders ComposableTutorial with two dropdowns (interface + language) and ComposableContent for each combination 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: -webkit-sticky;
  position: sticky;
  top: 60px;
  background: var(--background-color-primary);
  -webkit-column-gap: 16px;
  column-gap: 16px;
  row-gap: 12px;
  justify-items: space-between;
  border-bottom: 1px solid #E8EDEB;
  padding-bottom: 24px;
  z-index: 2;
}

@media only screen and (max-width: 767px) {
  .emotion-0 {
    -webkit-box-flex-wrap: wrap;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

.emotion-1 {
  -webkit-flex: 1 1 200px;
  -ms-flex: 1 1 200px;
  flex: 1 1 200px;
  font-size: 13px;
  overflow: hidden;
  z-index: 800;
  max-width: 200px;
}

.emotion-1 label,
.emotion-1 button {
  font-size: inherit;
}

.emotion-1 button {
  margin-top: 3px;
}

.dark-theme .emotion-1>button {
  background-color: var(--gray-dark4);
  color: var(--gray-light3);
}

@media only screen and (max-width: 767px) {
  .emotion-1 {
    -webkit-flex: 0 1 calc(50% - 8px);
    -ms-flex: 0 1 calc(50% - 8px);
    flex: 0 1 calc(50% - 8px);
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2>label {
  margin-bottom: 4px;
  text-transform: uppercase;
  color: var(--gray-dark1);
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.emotion-2>button {
  margin-top: 0;
  height: 22px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 4px;
}

.emotion-4 {
  color: #001E2B;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 13px;
  line-height: 20px;
  font-size: 13px;
  line-height: 20px;
  pointer-events: none;
}

@media only screen and (max-width: 768px) and (hover: none) and (pointer: coarse),@media only screen and (max-width: 768px) and (hover: none) and (pointer: none) {
  .emotion-4 {
    font-size: 16px;
    line-height: 19px;
  }
}

.emotion-5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #F9FBFA;
  border-color: #889397;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 36px;
  font-weight: 400;
  background-color: #FFFFFF;
  color: #889397;
  width: 100%;
  font-size: 13px;
}

.emotion-5:focus-visible,
.emotion-5[data-focus="true"] {
  outline: none;
}

.emotion-5:active,
.emotion-5[data-active="true"],
.emotion-5:focus,
.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5:focus-visible,
.emotion-5[data-focus="true"] {
  color: #001E2B;
}

.emotion-5:hover,
.emotion-5[data-hover="true"],
.emotion-5:active,
.emotion-5[data-active="true"] {
  color: #001E2B;
  background-color: #FFFFFF;
  box-shadow: 0 0 0 3px #E8EDEB;
}

.emotion-5:focus-visible,
.emotion-5[data-focus="true"] {
  background-color: #FFFFFF;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-5>*:last-child {
  grid-template-columns: 1fr 16px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-5>*:last-child>svg {
  justify-self: right;
  width: 16px;
  height: 16px;
}

.emotion-5>*:last-child>svg {
  color: #5C6C75;
}

.emotion-5>*:last-child {
  padding: 0 8px 0 12px;
}

.emotion-5:focus-visible {
  box-shadow: 0 0 0 3px #0498EC;
  border-color: rgba(255, 255, 255, 0);
}

@media only screen and (max-width: 768px) and (hover: none) and (pointer: coarse),@media only screen and (max-width: 768px) and (hover: none) and (pointer: none) {
  .emotion-5 {
    height: 36px;
    font-size: 16px;
  }
}

.emotion-6 {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5px;
}

.emotion-7 {
  display: grid;
  grid-auto-flow: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 0;
  -webkit-transition: all 150 ease-in-out;
  transition: all 150 ease-in-out;
  padding: 0 11px;
  gap: 6px;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  gap: 4px;
  overflow: hidden;
}

.emotion-9 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  max-width: 100%;
}

.emotion-10 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: #889397;
  height: 16px;
  width: 16px;
  justify-self: left;
}

.emotion-11 {
  display: none;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
}

.emotion-17 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #F9FBFA;
  border-color: #889397;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 36px;
  font-weight: 400;
  background-color: #FFFFFF;
  width: 100%;
  font-size: 13px;
}

.emotion-17:focus-visible,
.emotion-17[data-focus="true"] {
  outline: none;
}

.emotion-17:active,
.emotion-17[data-active="true"],
.emotion-17:focus,
.emotion-17:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17:focus-visible,
.emotion-17[data-focus="true"] {
  color: #001E2B;
}

.emotion-17:hover,
.emotion-17[data-hover="true"],
.emotion-17:active,
.emotion-17[data-active="true"] {
  color: #001E2B;
  background-color: #FFFFFF;
  box-shadow: 0 0 0 3px #E8EDEB;
}

.emotion-17:focus-visible,
.emotion-17[data-focus="true"] {
  background-color: #FFFFFF;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-17>*:last-child {
  grid-template-columns: 1fr 16px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-17>*:last-child>svg {
  justify-self: right;
  width: 16px;
  height: 16px;
}

.emotion-17>*:last-child>svg {
  color: #5C6C75;
}

.emotion-17>*:last-child {
  padding: 0 8px 0 12px;
}

.emotion-17:focus-visible {
  box-shadow: 0 0 0 3px #0498EC;
  border-color: rgba(255, 255, 255, 0);
}

@media only screen and (max-width: 768px) and (hover: none) and (pointer: coarse),@media only screen and (max-width: 768px) and (hover: none) and (pointer: none) {
  .emotion-17 {
    height: 36px;
    font-size: 16px;
  }
}

.emotion-25 {
  margin-top: 24px;
}

.emotion-26>*:first-child:not(script):not(style) {
  margin-top: 24px;
}

<div>
    <div
      class="emotion-0"
    >
      <div
        class="configurable-option emotion-1"
      >
        <div
          class="emotion-2"
          data-lgid="lg-select"
          data-testid="lg-select"
        >
          <div
            class="emotion-3"
          >
            <label
              class="emotion-4"
              data-lgid="lg-select-label"
              data-testid="lg-select"
              for="select-3"
              id="select-2-label"
            >
              Interface
            </label>
          </div>
          <button
            aria-controls="select-2-menu"
            aria-describedby="select-2-description"
            aria-disabled="false"
            aria-expanded="false"
            aria-invalid="false"
            aria-labelledby="select-2-label"
            class="lg-ui-button-0000 emotion-5"
            data-lgid="lg-select-trigger"
            data-testid="leafygreen-ui-select-menubutton"
            id="select-3"
            type="button"
            value=""
          >
            <div
              class="emotion-6"
            />
            <div
              class="emotion-7"
            >
              <div
                class="emotion-8"
              >
                <div
                  class="lg-ui-select-menu-0000 emotion-9"
                  data-lgid="lg-select-button_text"
                  data-testid="lg-select-button_text"
                >
                  Select
                </div>
              </div>
              <svg
                alt=""
                aria-hidden="true"
                class="emotion-10"
                height="16"
                role="presentation"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
          <span
            class="emotion-11"
          />
          <div
            aria-live="polite"
            aria-relevant="all"
            class="emotion-12"
            data-lgid="lg-form_field-feedback"
            data-testid="lg-form_field-feedback"
          />
        </div>
      </div>
      <div
        class="configurable-option emotion-1"
      >
        <div
          class="emotion-2"
          data-lgid="lg-select"
          data-testid="lg-select"
        >
          <div
            class="emotion-3"
          >
            <label
              class="emotion-4"
              data-lgid="lg-select-label"
              data-testid="lg-select"
              for="select-6"
              id="select-5-label"
            >
              Language
            </label>
          </div>
          <button
            aria-controls="select-5-menu"
            aria-describedby="select-5-description"
            aria-disabled="false"
            aria-expanded="false"
            aria-invalid="false"
            aria-labelledby="select-5-label"
            class="lg-ui-button-0000 emotion-17"
            data-lgid="lg-select-trigger"
            data-testid="leafygreen-ui-select-menubutton"
            id="select-6"
            type="button"
            value="nodejs"
          >
            <div
              class="emotion-6"
            />
            <div
              class="emotion-7"
            >
              <div
                class="emotion-8"
              >
                <div
                  class="lg-ui-select-menu-0000 emotion-9"
                  data-lgid="lg-select-button_text"
                  data-testid="lg-select-button_text"
                >
                  Node.js
                </div>
              </div>
              <svg
                alt=""
                aria-hidden="true"
                class="emotion-10"
                height="16"
                role="presentation"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
          <span
            class="emotion-11"
          />
          <div
            aria-live="polite"
            aria-relevant="all"
            class="emotion-12"
            data-lgid="lg-form_field-feedback"
            data-testid="lg-form_field-feedback"
          />
        </div>
      </div>
    </div>
    <div
      class="emotion-25"
    >
      <div
        class="composable-content emotion-26"
      >
        Mongosh + Node.js content
      </div>
    </div>
  </div>
</DocumentFragment>
`;
